src/profilerpage.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
.bg{
    background-color: rgb(14, 14, 14);
  
   
}

.unit{
    width: 28%;
    margin-left: 36%;
    margin-right: 36%;
    margin-top: 30px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-family: "Open sans";
    color: rgb(171, 232, 179);
    border-radius: 10px;
    border: 1.5px solid rgb(0, 177, 0);
    padding-bottom: 2%;
    background: linear-gradient(to bottom right, rgba(0, 128, 0, 0.449), rgba(0, 0, 0, 0.406))
}
button{
    background-color: rgb(0, 177, 0) ;
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    color: black;
    border: rgb(0, 177, 0);
    
}
input{
    background-image: linear-gradient(to right, rgb(19, 19, 19), green);
    outline-color: rgb(63, 229, 21);
    border: 1px solid rgba(255, 0, 0, 0);
    color: white;
    border-radius: 3px;
    margin-bottom:10px ;
}

.firstname {

    background-image: linear-gradient(to right, rgb(19, 19, 19), green);
    outline-color: rgb(63, 229, 21);
    border: 1px solid rgba(255, 0, 0, 0);
    color: white;
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;
    margin-bottom:10px ;
    border-radius: 3px;
  }
  .birthadd {
  
  }

  .output{
    width: 80%;
    text-align: center;
    margin: auto;
  }
  .next{
  color: white;
  padding: 19px;
  border-radius: 15px;
  position:fixed;
  top:78%;
  z-index:100;
  box-shadow: 0px 0px 20px 10px rgb(63, 229, 21) ;
  }

  .nextnest {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   position: absolute;
  }
  .backbtn{
    position: absolute;
    top: 42%;
    color: rgb(255, 255, 255);
    height: 8%;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
  }

  .hp1{
    font-size: 110%;
  }

  @media(max-width:950px){
    
    .hp1{
      font-size: 90%;
    }
    input{
      height:20% ;
      width: 50%;
      margin-left: 13.5%;
      
    }
    input::placeholder{
      font-size:80% ;
      
    }
    .firstname{
      height:20% ;
      width: 50%;
      margin-left: 13.5%;
      
    }
    .notep{
     font-size: 80%;
    }
    .unit{
      margin-top: 20px;
     }
    
  }


  @media(max-width:670px){
    
    .hp1{
      font-size: 90%;
    }
    input{
      height:20% ;
      width: 50%;
      margin-left: 13.5%;
      
    }
    input::placeholder{
      font-size:80% ;
      
    }
    .firstname{
      height:20% ;
      width: 50%;
      margin-left: 13.5%;
      font-size: 83%;
    }
    .notep{
     font-size: 80%;
    }
    .unit{
      margin-top: 20px;
      width: 36%;
      margin-left: 32%;
      margin-right: 32%;
     }
    
  }

  @media(max-width:490px){
    
    .hp1{
      font-size: 100%;
    }
    input{
      height:20% ;
      width: 50%;
      margin-left: 13.5%;
      
    }
    input::placeholder{
      font-size:94% ;
      
    }
    .firstname{
      height:20% ;
      width: 50%;
      margin-left: 13.5%;
      
    }
    .notep{
     font-size: 95%;
    }
    .unit{
      margin-top: 20px;
      width: 50%;
      margin-left: 25%;
      margin-right: 25%;
     }
    
  }


  @media(max-width:390px){
    
    .hp1{
      font-size: 83%;
    }
    input{
      height:20% ;
      width: 50%;
      margin-left: 13.5%;
      
    }
    input::placeholder{
      font-size:83% ;
      
    }
    .firstname{
      height:20% ;
      width: 50%;
      margin-left: 13.5%;
      
    }
    .notep{
     font-size: 85%;
    }
    .unit{
      margin-top: 20px;
      width: 50%;
      margin-left: 25%;
      margin-right: 25%;
     }
    
  }

